--- a/themes/kaze/layout/_partial/head.ejs
+++ b/themes/kaze/layout/_partial/head.ejs
@@ -85,7 +85,7 @@
   <%# default icon %>
   <%- css('//at.alicdn.com/t/font_1946621_vpj3dq9ceqa.css') %>
   <%# social icon %>
-  <%- css('//at.alicdn.com/t/font_2704826_zn5tqh9d9ue.css?spm=a313x.7781069.1998910419.77&file=font_2704826_zn5tqh9d9ue.css') %>
+  <%- css('//at.alicdn.com/t/font_2704826_zn5tqh9d9ue.css') %>
   <%- css('//at.alicdn.com/t/font_1952792_89b4ac4k4up.css') %>
   <% if(config.prismjs) { %>
   <% if(config.prismjs.enable && !config.highlight.enable) { %>
