--- a/themes/kaze/source/css/_base/highlight.styl
+++ b/themes/kaze/source/css/_base/highlight.styl
@@ -9,8 +9,8 @@ code[class*='hljs'], pre[class*='highlight']
   text-align: left
   white-space: pre
   word-spacing: normal
-  word-break: normal
-  word-wrap: normal
+  word-break: keep-all
+  word-wrap: break-word
   line-height: 1.5
   tab-size: 4
   hyphens: none
