--- a/themes/kaze/source/css/_base/reset.styl
+++ b/themes/kaze/source/css/_base/reset.styl
@@ -113,12 +113,12 @@ pre
   border-radius: 0.3rem !important
 ::-webkit-scrollbar
   background-color: transparent
-  width: 2px
-  height: 3px
+  width: 0px
+  height: 7px
   background-clip: padding-box
 ::-webkit-scrollbar-thumb
-  background-color: $divider-color
-  border-radius: 0.3rem
+  background-color: #e58a46
+  border-radius: 0.2rem
 @media (max-width : 742px)
   #dark
     display: none
