--- a/themes/kaze/layout/_partial/plugins/latex.ejs
+++ b/themes/kaze/layout/_partial/plugins/latex.ejs
@@ -9,7 +9,7 @@ if(flag) {
 }
 %>
 <% if(flag) { %>
-  <% const engine = 'katex'; %>
+  <% const engine = 'mathjax'; %>
   <% if(engine === 'mathjax') { %>
     <script>
       MathJax = {
